--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="pl">
+  <head>
+	<meta charset="utf-8">
+	<title>AutoBlog.pl</title>
+  </head>
+  <body style="font-family: Arial; font-size: 12px; background: gray;">
+  	
+  	<header style="background-color: #84cb00;">
+  	<h1>AutoBlog</h1>
+
+  	<nav style="text-align: center; background: rgb(19, 86, 19);">
+  		<a href="index.html">Strona główna</a>
+  		<a href="wspolpraca.html">Współpraca</a>
+  		<a href="kontakt.html">Kontakt</a>
+  	</nav>	
+  	</header>
+  	<main style=" background: white; padding; 5px;">
+  		<section>
+  			<h2>Nowy Mercedes</h2>
+  			<p>Pojawił się nowy model Mercedesa!</p>
+  			<a href="nowy_mercedes.html">kliknij i zobacz.</a>
+  		</section>
+  		<hr>
+  		<section>
+  			<h2>Testy Passata</h2>
+  			<p>Typowy Mirek bierze na warsztat noweg VW.</p>
+  			<a href="testy_passata.html">kliknij i zobacz.</a>
+  		</section>
+  	</main>
+  	<footer>
+  		&copy; AutoBlog 2018
+  	</footer  style="padding; 5px;">
+  </body>
+</html>
