--- a/index.html
+++ b/index.html
@@ -3,19 +3,54 @@
   <head>
 	<meta charset="utf-8">
 	<title>AutoBlog.pl</title>
+	<style type="text/css">
+		body{
+			font-family: Arial; 
+			font-size: 12px; 
+			background: gray;
+		}
+		header{
+			background-color: #84cb00;
+			padding: 5px;
+		}
+		header nav{
+
+			text-align: center; 
+			background: rgb(19, 86, 19);
+			padding: 5px;
+		}
+		header nav a{
+				color: #fff;
+				background: #0a700a;
+
+		}
+		main{
+			background: white;
+			padding; 5px;
+		}
+		footer{
+			  padding; 
+			  5px;
+
+		}
+		
+
+	</style>
+		</style>	
+	</style>
   </head>
-  <body style="font-family: Arial; font-size: 12px; background: gray;">
+  <body>
   	
-  	<header style="background-color: #84cb00;">
+  	<header>
   	<h1>AutoBlog</h1>
 
-  	<nav style="text-align: center; background: rgb(19, 86, 19);">
+  	<nav>
   		<a href="index.html">Strona główna</a>
   		<a href="wspolpraca.html">Współpraca</a>
   		<a href="kontakt.html">Kontakt</a>
   	</nav>	
   	</header>
-  	<main style=" background: white; padding; 5px;">
+  	<main>
   		<section>
   			<h2>Nowy Mercedes</h2>
   			<p>Pojawił się nowy model Mercedesa!</p>
@@ -30,6 +65,6 @@
   	</main>
   	<footer>
   		&copy; AutoBlog 2018
-  	</footer  style="padding; 5px;">
+  	</footer>
   </body>
 </html>
