--- a/index.html
+++ b/index.html
@@ -3,41 +3,8 @@
   <head>
 	<meta charset="utf-8">
 	<title>AutoBlog.pl</title>
-	<style type="text/css">
-		body{
-			font-family: Arial; 
-			font-size: 12px; 
-			background: gray;
-		}
-		header{
-			background-color: #84cb00;
-			padding: 5px;
-		}
-		header nav{
-
-			text-align: center; 
-			background: rgb(19, 86, 19);
-			padding: 5px;
-		}
-		header nav a{
-				color: #fff;
-				background: #0a700a;
-
-		}
-		main{
-			background: white;
-			padding; 5px;
-		}
-		footer{
-			  padding; 
-			  5px;
-
-		}
-		
-
-	</style>
-		</style>	
-	</style>
+	<link rel="stylesheet" href="style.css" type="text/css">
+	
   </head>
   <body>
   	
