--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   	<main>
   		<section>
   			<h2>Nowy Mercedes</h2>
-  			<p>
+  			<p class="background-red">
   				<img src="images/mercedes.jpg" alt="Mercedes Benz 3.0">
 
   			Pojawił się nowy model Mercedesa!</p>
-  			<a href="nowy_mercedes.html">kliknij i zobacz.</a>
+  			<a href="nowy_mercedes.html">Kliknij i zobacz.</a>
   		</section>
   		<hr>
   		<section>
-  			<h2>Testy Passata</h2>
+  			<h2 "background-green">Testy Passata</h2>
   			<p>Typowy Mirek bierze na warsztat noweg VW.</p>
-  			<a href="testy_passata.html">kliknij i zobacz.</a>
+  			<a href="testy_passata.html">Kliknij i zobacz.</a>
   		</section>
   	</main>
   	<footer>
