--- a/position.html
+++ b/position.html
@@ -8,30 +8,50 @@
   <link rel="stylesheet" href="article.css" type="text/css">
 	-->
   <style>
-  .wraper{
-    background-color: yellow;
-  } 
-  .box{
-    width: 100px;
-    width: 100px;
+  body {
+  height: 1500px;
+}
 
-    background: blue;
-    padding: 5px;
-    color: white;
-    margin-top: 50px;
-    margin-left: 200px;
+.wrapper {
+  position: relative;
+  width: 200px;
+  border: 2px solid black;
+  text-align: center;
+  padding: 30px;
+  margin-top: 100px;
+  margin-left: 100px;
+}
+
+.wrapper .box {
+  width: 20px;
+  height: 20px;
+  background: red;
+  padding: 5px;
+  color: white;
+  margin-top: 0;
+  margin-left: 0;
+  position: absolute;
+  top: 0;
+  /*
+  left: 100%;
+  margin-left: -10px;
+  margin-top: -10px;
+  */
+  right: 0;
+  margin-right: -10px;
+  margin-top: -10px;
+}
 
 
 
-
-  }
   </style>
   </head>
   <body>
     <div class="wrapper">
       Hello
+
     <div class="box">
-      I'm box.
+      12
     </div>
   </div>
 
