--- a/position.html
+++ b/position.html
@@ -14,12 +14,13 @@
 
 .wrapper {
   position: relative;
-  width: 200px;
+  /*width: 200px;*/
   border: 2px solid black;
   text-align: center;
   padding: 30px;
   margin-top: 100px;
   margin-left: 100px;
+  display: inline-block;
 }
 
 .wrapper .box {
@@ -48,7 +49,7 @@
   </head>
   <body>
     <div class="wrapper">
-      Hello
+      Hellolsrklmlkgfmblsfl;bsfl;bnsfl;bnsf;lbnfgb;slfgbklbkfnb;
 
     <div class="box">
       12
