--- a/display.html
+++ b/display.html
@@ -1,84 +1,79 @@
 <!DOCTYPE html>
 <html lang="pl">
-   <head>
-       <!-- komentarz -->
-       <meta charset="UTF-8">
-       <title>UnitedBlog.pl</title>
-       
-       <style>
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
 
-       * {
-           box-sizing: border-box;
-       }
-       .displays-wrapper {
-           position: relative;
-           background-color: blue;
+    <style>
+        /* * {
+            box-sizing: border-box;
+        } */
 
-       }
+        .displays-wrapper {
+            position: relative;
+            background: blue;
+        }
 
-       .displays-wrapper div{
-           background-color: yellow;
-       }
+        .displays-wrapper div {
+            background: yellow;
+        }
 
-       .display-block {
-           display: block;
+        /* 100% szerokości */
+        .display-block {
+            display: block;
+        }
 
-       }
+        .display-inline-block {
+            display: inline-block;
+            width: 50%;
+            float: left;
+        }
 
-       .display-inline-block {
-           display: inline-block;
-           width: 50%;
-           float: left;
+        .display-inline {
+            display: inline;
+        }
 
-       }
+        .border {
+            border: 5px dotted green;
+        }
 
-       .display-inline {
-           display: inline;
+        .display-none {
+            display: none;
+        }
 
-       }
+        .orange {
+            background: orange !important;
+        }
 
-       .border {
-           border: 2px dotted green;
-       }
+        .margin-top {
+            margin-top: 5px;
+        }
+    </style>
+</head>
+<body>
 
-       .display-none {
-           display: none;
-       }
+    <div class="displays-wrapper">
+        <div class="display-inline-block border">
+            Hello inline!
+        </div>
+        <div class="display-inline-block orange">
+            Hello inline #2!
+        </div>
+    </div>
 
-       .orange {
-           background: orange !important;
-       }
+    <div class="displays-wrapper">
+        <div class="display-none">
+            Hello none!
+        </div>
+    </div>
 
-       </style>
-   </head>
-   <body>
-           <!-- <div class="displays-wrapper">
-               <div class="display-inline-block">
-                   Hello inline!
-               </div>
-               <div class="display-inline-block">
-                   Hello inline again2!
-               </div>
-           </div> -->
+    <div class="displays-wrapper">
+        <div class="display-inline-block margin-top yellow">Hello inline-block!</div>
+        <div class="display-inline margin-top orange">Hello inline!</div>
+        <span>Hello world!</span>
+    </div>
 
-           <div class="displays-wrapper">
-               <div class="display-inline-block border">
-                   Inline block 1
-               </div>
-               <div class="display-inline-block orange border">
-                   Inline block 2
-               </div>
-           </div>
-           <div class="displays-wrapper">
-               <div class="display-inline-block border orange">
-                   Inline block 3
-               </div>
-               <div class="display-inline-block border">
-                   Inline block 4
-               </div>
-           </div>
+</body>
+</html>
 
-               
 
-   </body>
-   </html>
