--- a/center.html
+++ b/center.html
@@ -7,13 +7,20 @@
 		.wrapper{
 			width: 500px;
 			height:500px;
-			margin-left: auto;
+			display:flex;
+			align-items:center;
+			justify-content:center;
+			
+
+			/*margin-left: auto;
 			margin-right: auto;
 			position: relative;
+			*/
 		}
 		.wapper .box{
 			width: 100px;
 			height: 100px;
+			/*
 			position:absolute;
 			margin-left: -50px;
 			margin-top: -50px;
@@ -21,6 +28,7 @@
 			/*margin:auto;*/
 			top:50%;
 			left:50%;
+			*/
 		}
 		.grey{
 			background: grey;
