--- a/center.html
+++ b/center.html
@@ -6,18 +6,18 @@
 	<style>
 		.wrapper{
 			width: 500px;
-			height:500px;
-			display:flex;
-			align-items:center;
-			justify-content:center;
-			
+			height: 500px;
+			display: flex;
+			align-items: center;/*y*/
+			justify-content: center;/*x*/
+
 
 			/*margin-left: auto;
 			margin-right: auto;
 			position: relative;
 			*/
 		}
-		.wapper .box{
+		.wrapper .box{
 			width: 100px;
 			height: 100px;
 			/*
@@ -26,9 +26,8 @@
 			margin-top: -50px;
 			/*margin-right: auto;*/
 			/*margin:auto;*/
-			top:50%;
-			left:50%;
-			*/
+			/*top:50%;
+			left:50%;*/
 		}
 		.grey{
 			background: grey;
