--- a/center.html
+++ b/center.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8">
 <head>
+<meta charset="UTF-8">
+
 	<title>Document</title>
 	<style>
 		.wrapper{
